<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_planning_simulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kimjusung2109@naver.com">k</maintainer>
  <license>TODO: License declaration</license>

  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
